# qxcore

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build-all.sh  compile_commands.json  go.mod
.clinerules/: 项目.md
.rules/: MODUELS.md  PROJECT.md
cmake/: DownloadNinja.cmake  QXCoreConfig.cmake.in  ThirdParty.cmake  zig-cc-wrapper.in  zig-cxx-wrapper.in  zig-toolchain.cmake
docs/: log_api.md
examples/: CMakeLists.txt
examples/log/: CMakeLists.txt  log_example.cc
include/qxcore/log/: glog_backend.h  log.h  log_level.h  spdlog_backend.h
pkg/core/: core.go  core_test.go
src/: CMakeLists.txt
src/qxcore/log/: CMakeLists.txt  glog_backend.cc  log.cc  log_level.cc  spdlog_backend.cc
summary/: BUILD_SUCCESS_SUMMARY.md  CMAKE_REFACTORING_COMPLETION_SUMMARY.md  CMAKE_REFACTORING_SUMMARY.md  CMAKE_WARNING_FIX_SUMMARY.md  CROSS_COMPILATION_SUCCESS_SUMMARY.md  FINAL_CROSS_COMPILATION_SUCCESS_SUMMARY.md  GOOGLETEST_INTEGRATION_SUMMARY.md  LOG_MODULE_SUMMARY.md
tests/: CMakeLists.txt
tests/qxcore/log/: CMakeLists.txt  consistency_test.cc  glog_backend_test.cc  log_benchmark.cc  log_level_test.cc  log_test.cc  spdlog_backend_test.cc
